--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled = true
+
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -95,6 +97,10 @@ dependencies {
     // Date and time library
     implementation 'io.github.vanpra.compose-material-dialogs:datetime:0.9.0'
 
+    // JSON Adapter
+    implementation 'com.squareup.moshi:moshi:1.13.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -102,4 +108,7 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // To allow the use of LocalDateTime
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.0.4")
 }
