--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,8 +98,7 @@ dependencies {
     implementation 'io.github.vanpra.compose-material-dialogs:datetime:0.9.0'
 
     // JSON Adapter
-    implementation 'com.squareup.moshi:moshi:1.13.0'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    implementation 'com.google.code.gson:gson:2.10'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
